--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Mon Sep 25 02:47:16 CEST 2023
+#Sat Feb 24 20:16:15 CET 2024
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
