--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,15 +1,15 @@
 #Splash screen properties
-#Sat Feb 24 20:49:48 CET 2024
-background=0xFFFFFF
-memoryGood=0x78CB34
-font=0x0
-barBackground=0xFFFFFF
-barBorder=0xC0C0C0
-memoryLow=0xE42F2F
-rotate=false
-memoryWarn=0xE6E84A
+#Sun Feb 25 01:40:02 CET 2024
+background=0x6988cd
+memoryGood=0xcb8934
+font=0xd9d9d9
+barBackground=0x2e2e2e
+barBorder=0x828282
+memoryLow=0x0c10a5
+rotate=true
+memoryWarn=0x292ee0
 showMemory=true
-bar=0xCB3D35
+bar=0xcb8934
 enabled=true
 resourcePackPath=resources
 logoOffset=0
